--- a/Src/DocumentationApiPoc.LibraryApi/appsettings.Development.json
+++ b/Src/DocumentationApiPoc.LibraryApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=LibraryApiDemo;User Id=SA;Password=MyPass@word;TrustServerCertificate=True;"
   }
 }
