--- a/Src/DocumentationApiPoc.LibraryApi/DocumentationApiPoc.LibraryApi.csproj
+++ b/Src/DocumentationApiPoc.LibraryApi/DocumentationApiPoc.LibraryApi.csproj
@@ -7,11 +7,22 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0-preview.4.22229.2">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0-preview.4.22229.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers" />
+      <Folder Include="Shared\InputModels\Commands" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Application\RequestHandlers\GetAuthorsQueryHandler.cs" />
     </ItemGroup>
 
 </Project>
